--- a/FlowCrypt/src/main/res/layout/messages_list_item.xml
+++ b/FlowCrypt/src/main/res/layout/messages_list_item.xml
@@ -19,8 +19,8 @@
         android:textColor="@color/dark"
         android:textSize="@dimen/default_text_size_big"
         app:layout_constraintBottom_toBottomOf="@+id/textViewDate"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintEnd_toStartOf="@+id/imageViewAtts"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
         app:layout_constraintTop_toTopOf="@+id/guidelineTop"
         app:layout_goneMarginRight="@dimen/gone_margin_right_attachment_icon"
@@ -30,8 +30,8 @@
         android:id="@+id/imageViewAtts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/default_margin_small"
         android:layout_marginStart="@dimen/default_margin_small"
+        android:layout_marginEnd="@dimen/default_margin_small"
         android:contentDescription="@string/attachment"
         app:layout_constraintEnd_toStartOf="@+id/textViewDate"
         app:layout_constraintStart_toEndOf="@+id/textViewSenderAddress"
@@ -49,7 +49,7 @@
         android:textColor="@color/gray"
         android:textSize="@dimen/default_text_size_medium"
         app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
-        app:layout_constraintEnd_toStartOf="@+id/imageViewAtts"
+        app:layout_constraintEnd_toStartOf="@+id/viewIsEncrypted"
         app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
         app:layout_constraintTop_toBottomOf="@+id/textViewSenderAddress"
         tools:text="What up man" />
@@ -72,7 +72,9 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/security"
         android:src="@mipmap/ic_security"
+        android:layout_marginStart="@dimen/default_margin_small"
         app:layout_constraintBottom_toBottomOf="@+id/textViewSubject"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textViewSubject"
