--- a/FlowCrypt/src/dev/res/xml/dev_preferences.xml
+++ b/FlowCrypt/src/dev/res/xml/dev_preferences.xml
@@ -3,22 +3,73 @@
   ~ Contributors: DenBond7
   -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title="@string/preferences_title_debugging">
+<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <androidx.preference.PreferenceCategory android:title="@string/pref_title_general">
         <com.flowcrypt.email.ui.activity.fragment.preferences.BuildConfInfoPreference
             android:key="@string/preferences_key_build_config_info"
-            android:title="@string/preferences_title_build_config_info" />
-        <CheckBoxPreference
-            android:key="@string/preferences_key_is_write_logs_to_file_enable"
-            android:title="@string/preferences_title_enable_write_api_logs_to_file" />
-        <CheckBoxPreference
-            android:defaultValue="@string/gradle_is_mail_debug_enabled"
-            android:key="@string/preferences_key_is_mail_debug_enable"
-            android:title="@string/preferences_title_enable_mail_debug" />
-        <Preference android:title="@string/crash_the_app">
+            android:title="@string/pref_title_build_config_info" />
+        <androidx.preference.Preference android:title="@string/crash_the_app">
             <intent
                 android:targetClass="com.flowcrypt.email"
                 android:targetPackage="@string/application_id" />
-        </Preference>
-    </PreferenceCategory>
-</PreferenceScreen>
+        </androidx.preference.Preference>
+    </androidx.preference.PreferenceCategory>
+
+    <androidx.preference.PreferenceCategory android:title="@string/pref_title_http">
+        <androidx.preference.SwitchPreference
+            android:defaultValue="@string/gradle_is_http_log_enabled"
+            android:key="@string/pref_key_is_http_log_enabled"
+            android:summaryOff="@string/pref_summary_disabled"
+            android:summaryOn="@string/pref_summary_enabled"
+            android:title="@string/pref_title_http_logs" />
+        <androidx.preference.ListPreference
+            android:defaultValue="@string/gradle_http_log_level"
+            android:dependency="@string/pref_key_is_http_log_enabled"
+            android:entries="@array/http_log_level_entries_and_values"
+            android:entryValues="@array/http_log_level_entries_and_values"
+            android:key="@string/pref_key_http_log_level"
+            android:summary="%s"
+            android:title="@string/pref_title_http_log_level" />
+        <androidx.preference.SwitchPreference
+            android:defaultValue="false"
+            android:dependency="@string/pref_key_is_http_log_enabled"
+            android:key="@string/preferences_key_is_write_logs_to_file_enabled"
+            android:summaryOff="@string/pref_summary_disabled"
+            android:summaryOn="@string/pref_summary_enabled"
+            android:title="@string/pref_title_write_api_logs_to_file" />
+    </androidx.preference.PreferenceCategory>
+
+    <androidx.preference.PreferenceCategory android:title="@string/pref_title_java_mail">
+        <androidx.preference.SwitchPreference
+            android:defaultValue="@string/gradle_is_mail_debug_enabled"
+            android:key="@string/preferences_key_is_mail_debug_enabled"
+            android:summaryOff="@string/pref_summary_disabled"
+            android:summaryOn="@string/pref_summary_enabled"
+            android:title="@string/pref_title_imap_debug" />
+    </androidx.preference.PreferenceCategory>
+
+    <androidx.preference.PreferenceCategory android:title="@string/pref_title_node">
+        <androidx.preference.SwitchPreference
+            android:defaultValue="@string/gradle_is_node_http_debug_enabled"
+            android:key="@string/pref_key_is_node_http_debug_enabled"
+            android:summaryOff="@string/pref_summary_disabled"
+            android:summaryOn="@string/pref_summary_enabled"
+            android:title="@string/pref_title_node_http" />
+
+        <androidx.preference.ListPreference
+            android:defaultValue="@string/gradle_node_http_log_level"
+            android:dependency="@string/pref_key_is_node_http_debug_enabled"
+            android:entries="@array/http_log_level_entries_and_values"
+            android:entryValues="@array/http_log_level_entries_and_values"
+            android:key="@string/pref_key_node_http_log_level"
+            android:summary="%s"
+            android:title="@string/pref_title_node_http_log_level" />
+
+        <androidx.preference.SwitchPreference
+            android:defaultValue="false"
+            android:key="@string/pref_key_is_native_node_debug_enabled"
+            android:summaryOff="@string/pref_summary_disabled"
+            android:summaryOn="@string/pref_summary_enabled"
+            android:title="@string/pref_title_native_node_logs" />
+    </androidx.preference.PreferenceCategory>
+</androidx.preference.PreferenceScreen>
