--- a/FlowCrypt/src/main/res/drawable/bg_att.xml
+++ b/FlowCrypt/src/main/res/drawable/bg_att.xml
@@ -9,7 +9,7 @@
     <item>
         <shape android:shape="rectangle">
             <stroke
-                android:width="1px"
+                android:width="0.25dp"
                 android:color="@color/silver" />
         </shape>
     </item>
