--- a/FlowCrypt/src/main/res/drawable/bg_att_decrypted.xml
+++ b/FlowCrypt/src/main/res/drawable/bg_att_decrypted.xml
@@ -17,7 +17,7 @@
     <item>
         <shape android:shape="rectangle">
             <stroke
-                android:width="1px"
+                android:width="0.25dp"
                 android:color="@color/silver" />
         </shape>
     </item>
