--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -66,4 +66,5 @@
     <dimen name="drop_down_vertical_offset_spinner_from">56dp</dimen>
     <dimen name="drop_down_size">32dp</dimen>
     <dimen name="padding_recipients_to">48dp</dimen>
+    <dimen name="margin_bottom_att">8dp</dimen>
 </resources>
