--- a/FlowCrypt/src/main/res/menu/fragment_compose.xml
+++ b/FlowCrypt/src/main/res/menu/fragment_compose.xml
@@ -16,5 +16,5 @@
         android:id="@+id/menuActionSend"
         android:icon="@mipmap/ic_action_send"
         android:title="@string/send"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 </menu>
