--- a/FlowCrypt/src/main/res/layout/activity_feedback.xml
+++ b/FlowCrypt/src/main/res/layout/activity_feedback.xml
@@ -8,96 +8,130 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:orientation="vertical"
     tools:context="com.flowcrypt.email.ui.activity.settings.FeedbackActivity">
 
     <include layout="@layout/toolbar" />
 
-    <FrameLayout
-        android:id="@id/layoutContent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutContent"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent">
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyle"
+        <View
+            android:id="@+id/viewDivider"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/default_single_dip"
+            android:layout_marginBottom="@dimen/default_margin_content"
+            android:background="@color/aluminum"
+            app:layout_constraintBottom_toTopOf="@+id/textViewAuthorHint"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/textViewAuthorHint"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/i_will_usually_reply_within_an_hour_except_when_i_sleep_tom"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            android:textColor="@color/gray"
+            app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayoutUserMessage"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:hint="@string/your_message"
+            android:textColorHint="@color/silver"
+            app:layout_constraintBottom_toTopOf="@+id/checkBoxScreenshot"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toTopOf="@+id/guidelineTop">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editTextUserMessage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="top"
+                android:inputType="textCapSentences|textMultiLine" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <CheckBox
+            android:id="@+id/checkBoxScreenshot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="gone" />
+            android:layout_marginBottom="16dp"
+            android:text="@string/include_app_screenshot"
+            app:layout_constraintBottom_toTopOf="@+id/imageButtonScreenshot"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layoutInput"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <ImageButton
+            android:id="@+id/imageButtonScreenshot"
+            android:layout_width="@dimen/width_screenshot"
+            android:layout_height="@dimen/height_screenshot"
+            android:background="?android:attr/selectableItemBackground"
+            android:contentDescription="@string/screenshot"
+            android:padding="@dimen/default_margin_small"
+            android:scaleType="centerInside"
+            app:layout_constraintBottom_toTopOf="@+id/textViewTouchToPreview"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            tools:srcCompat="@tools:sample/avatars"
+            tools:visibility="visible" />
 
-            <View
-                android:id="@+id/viewDivider"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/default_single_dip"
-                android:layout_marginBottom="@dimen/default_margin_content"
-                android:background="@color/aluminum"
-                app:layout_constraintBottom_toTopOf="@+id/textViewAuthorHint"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/textViewTouchToPreview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/default_margin_content"
+            android:text="@string/touch_to_preview_and_edit"
+            app:layout_constraintBottom_toTopOf="@+id/viewDivider"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            tools:visibility="visible" />
 
-            <TextView
-                android:id="@+id/textViewAuthorHint"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/i_will_usually_reply_within_an_hour_except_when_i_sleep_tom"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-                android:textColor="@color/gray"
-                app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
-                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-                app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="@dimen/default_margin_content" />
 
-            <EditText
-                android:id="@+id/editTextUserMessage"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:background="@null"
-                android:ems="10"
-                android:gravity="start|top"
-                android:hint="@string/your_message"
-                android:inputType="textMultiLine"
-                android:textColorHint="@color/silver"
-                app:layout_constraintBottom_toTopOf="@+id/viewDivider"
-                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-                app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-                app:layout_constraintTop_toTopOf="@+id/guidelineTop"
-                tools:ignore="Autofill" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineTop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="@dimen/default_margin_content" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guidelineLeft"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="@dimen/default_margin_content" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineRight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="@dimen/default_margin_content" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guidelineTop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_begin="@dimen/default_margin_content" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineBottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_end="@dimen/default_margin_content" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guidelineRight"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_end="@dimen/default_margin_content" />
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/screenShotGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:constraint_referenced_ids="imageButtonScreenshot,textViewTouchToPreview" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guidelineBottom"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_end="@dimen/default_margin_content" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
