Added an ability to modify screenshot before sending.| #680

--- a/FlowCrypt/src/main/res/values/colors.xml
+++ b/FlowCrypt/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="silver">#C6C6C6</color>
     <color name="gray">#989898</color>
     <color name="dark">#535353</color>
+    <color name="black">#000000</color>
     <color name="transparent_white">#A0FFFFFF</color>
     <color name="orange">#D18826</color>
+    <color name="yellow">#FFEB3B</color>
 </resources>
