--- a/FlowCrypt/src/main/res/layout/fragment_send_user_public_key.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_send_user_public_key.xml
@@ -3,70 +3,55 @@
   ~ Contributors: DenBond7
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textViewMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginStart="@dimen/default_margin_content"
         android:layout_marginTop="@dimen/default_margin_content_small"
         android:layout_marginEnd="@dimen/default_margin_content"
         android:gravity="center"
         android:paddingLeft="@dimen/default_margin_content_small"
         android:paddingRight="@dimen/default_margin_content_small"
-        android:text="@string/loading"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/loading" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginTop="@dimen/default_margin_content_small"
-        android:layout_marginBottom="@dimen/default_margin_content_small"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />
+        android:layout_marginBottom="@dimen/default_margin_content_small" />
 
     <ListView
         android:id="@+id/listViewKeys"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="@dimen/default_margin_content_small"
         android:layout_marginTop="@dimen/default_margin_content_small"
         android:layout_marginEnd="@dimen/default_margin_content_small"
+        android:layout_weight="1"
         android:divider="@color/aluminum"
         android:dividerHeight="@dimen/default_single_dip"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewMessage"
         tools:listitem="@layout/key_item" />
 
     <Button
         android:id="@+id/buttonOk"
         style="@style/AppWidget.Button"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_margin_content_small"
         android:layout_marginEnd="@dimen/default_margin_content_small"
         android:layout_marginBottom="@dimen/default_margin_content_small"
         android:text="@android:string/ok"
-        android:theme="@style/AppWidget.Button.Green"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/listViewKeys" />
+        android:theme="@style/AppWidget.Button.Green" />
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/groupContent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="listViewKeys,buttonOk" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
+
