--- a/FlowCrypt/src/main/res/values/colors.xml
+++ b/FlowCrypt/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="transparent_white">#A0FFFFFF</color>
     <color name="orange">#D18826</color>
     <color name="yellow">#FFEB3B</color>
+    <color name="green">#088447</color>
 </resources>
