--- a/FlowCrypt/src/main/res/layout/fragment_message_details.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_message_details.xml
@@ -35,11 +35,12 @@
                     android:id="@+id/textViewSenderAddress"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/default_margin_small"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:textColor="@color/gray"
                     android:textSize="@dimen/default_text_size_big"
-                    app:layout_constraintEnd_toStartOf="@+id/textViewDate"
+                    app:layout_constraintEnd_toStartOf="@+id/imageButtonReplyAll"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -50,13 +51,29 @@
                     android:id="@+id/imageButtonReplyAll"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="?android:attr/selectableItemBackground"
+                    android:layout_marginStart="@dimen/default_margin_medium"
+                    android:layout_marginEnd="@dimen/default_margin_content_big"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@string/reply_all"
-                    android:visibility="gone"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    android:visibility="invisible"
+                    app:layout_constraintEnd_toStartOf="@+id/imageButtonMoreOptions"
+                    app:layout_constraintStart_toStartOf="@+id/textViewDate"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_goneMarginRight="@dimen/default_margin_medium"
                     app:srcCompat="@mipmap/ic_reply_all_green"
+                    tools:visibility="visible" />
+
+                <ImageButton
+                    android:id="@+id/imageButtonMoreOptions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/reply_all"
+                    android:visibility="invisible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_goneMarginRight="@dimen/default_margin_medium"
+                    app:srcCompat="@drawable/ic_more_vert_green_32dp"
                     tools:visibility="visible" />
 
                 <TextView
