Added more space between icons.| Close #693

--- a/FlowCrypt/src/main/res/layout/fragment_message_details.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_message_details.xml
@@ -51,13 +51,11 @@
                     android:id="@+id/imageButtonReplyAll"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/default_margin_medium"
-                    android:layout_marginEnd="@dimen/default_margin_huge"
+                    android:layout_marginEnd="16dp"
                     android:background="?android:attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@string/reply_all"
                     android:visibility="invisible"
                     app:layout_constraintEnd_toStartOf="@+id/imageButtonMoreOptions"
-                    app:layout_constraintStart_toStartOf="@+id/textViewDate"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_goneMarginRight="@dimen/default_margin_medium"
                     app:srcCompat="@mipmap/ic_reply_all_red"
