--- a/FlowCrypt/src/main/res/layout/messages_list_item.xml
+++ b/FlowCrypt/src/main/res/layout/messages_list_item.xml
@@ -39,22 +39,6 @@
         app:srcCompat="@mipmap/ic_attachment" />
 
     <TextView
-        android:id="@+id/textViewSubject"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/default_margin_content_small"
-        android:layout_marginTop="@dimen/default_margin_content_small"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textColor="@color/gray"
-        android:textSize="@dimen/default_text_size_medium"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
-        app:layout_constraintEnd_toStartOf="@+id/viewIsEncrypted"
-        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSenderAddress"
-        tools:text="What up man" />
-
-    <TextView
         android:id="@+id/textViewDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -66,19 +50,43 @@
         app:layout_constraintTop_toTopOf="@+id/guidelineTop"
         tools:text="1:05 PM" />
 
+    <TextView
+        android:id="@+id/textViewSubject"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/default_margin_content_small"
+        android:layout_marginBottom="@dimen/default_margin_content_small"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/default_text_size_medium"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
+        app:layout_constraintEnd_toStartOf="@+id/imageViewStatus"
+        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSenderAddress"
+        tools:text="What up man" />
+
+    <ImageView
+        android:id="@+id/imageViewStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/security"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewSubject"
+        app:layout_constraintEnd_toStartOf="@+id/viewIsEncrypted"
+        app:layout_constraintTop_toTopOf="@+id/textViewSubject"
+        tools:src="@drawable/ic_archive_blue_16dp" />
+
     <ImageView
         android:id="@+id/viewIsEncrypted"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/security"
         android:src="@mipmap/ic_security"
-        android:layout_marginStart="@dimen/default_margin_small"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewSubject"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/imageViewStatus"
         app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/textViewSubject"
-        app:layout_constraintTop_toTopOf="@+id/textViewSubject" />
+        app:layout_constraintTop_toTopOf="@+id/imageViewStatus" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineLeft"
