--- a/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
+++ b/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
@@ -6,6 +6,7 @@
 <androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.preference.Preference
+        android:key="@string/pref_key_backups"
         android:title="@string/backups"
         app:iconSpaceReserved="false">
         <intent
