Fixed AddNewAccountActivity (Gmail enterprise login).| #752

--- a/FlowCrypt/src/main/res/layout/activity_add_new_account.xml
+++ b/FlowCrypt/src/main/res/layout/activity_add_new_account.xml
@@ -5,7 +5,6 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/screenContent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -22,7 +21,7 @@
             android:id="@+id/layoutContent"
             layout="@layout/content_add_new_account"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
         <include
             android:id="@+id/progressView"
