Fixed '<fragment>' deprecation warnings.| #752

--- a/FlowCrypt/src/main/res/layout/activity_corrupted_storage.xml
+++ b/FlowCrypt/src/main/res/layout/activity_corrupted_storage.xml
@@ -26,7 +26,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment"
         android:name="com.flowcrypt.email.ui.activity.fragment.CorruptedStorageActivityFragment"
         android:layout_width="match_parent"
