--- a/FlowCrypt/src/main/res/layout/content_main_preferences.xml
+++ b/FlowCrypt/src/main/res/layout/content_main_preferences.xml
@@ -3,7 +3,7 @@
   ~ Contributors: DenBond7
   -->
 
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/composeFragment"
     android:name="com.flowcrypt.email.ui.activity.fragment.MainSettingsFragment"
