--- a/FlowCrypt/src/main/res/layout/activity_security_settings.xml
+++ b/FlowCrypt/src/main/res/layout/activity_security_settings.xml
@@ -9,7 +9,7 @@
 
     <include layout="@layout/toolbar" />
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/securitySettingsFragment"
         android:name="com.flowcrypt.email.ui.activity.fragment.preferences.SecuritySettingsFragment"
