--- a/FlowCrypt/src/main/res/layout/content_create_message.xml
+++ b/FlowCrypt/src/main/res/layout/content_create_message.xml
@@ -3,7 +3,7 @@
   ~ Contributors: DenBond7
   -->
 
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/composeFragment"
