Updated the recycler view library. Added a simple realization of 'recyclerview-selection' library.| #793

--- a/FlowCrypt/src/main/res/layout/messages_list_item.xml
+++ b/FlowCrypt/src/main/res/layout/messages_list_item.xml
@@ -8,7 +8,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/layout_height_message_item"
-    android:background="?attr/selectableItemBackground"
+    android:background="@drawable/selector_msg_item"
+    android:foreground="?attr/selectableItemBackground"
     android:orientation="vertical">
 
     <TextView
