Added an ability to delete/archive/mark unread a few messages by one transaction.| #793

--- a/FlowCrypt/src/main/res/menu/message_list_context_menu.xml
+++ b/FlowCrypt/src/main/res/menu/message_list_context_menu.xml
@@ -22,5 +22,5 @@
         android:id="@+id/menuActionMarkUnread"
         android:icon="@drawable/selector_ic_markunread_white"
         android:title="@string/mark_unread"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
